--- a/config_sample.env
+++ b/config_sample.env
@@ -1,12 +1,10 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5375326610:AAEB2mf_54hwvFZGr8TqfamxKVySfmq_J8w"                              # Require restart after changing it while bot running
+OWNER_ID = "5274572622"                               # Require restart after changing it while bot running
+TELEGRAM_API = "11970346"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "bf43ff670be15fd740eed94820fdd49f"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
-USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
+USER_SESSION_STRING = "mongodb+srv://wajigo2557:wajigo2557@cluster0.raxskto.mongodb.net/?retryWrites=true&w=majority"                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
