--- a/config.env
+++ b/config.env
@@ -4,8 +4,8 @@ OWNER_ID = "5274572622"                               # Require restart after ch
 TELEGRAM_API = "11970346"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "bf43ff670be15fd740eed94820fdd49f"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
-USER_SESSION_STRING = "mongodb+srv://wajigo2557:wajigo2557@cluster0.raxskto.mongodb.net/?retryWrites=true&w=majority"                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://wajigo2557:wajigo2557@cluster0.raxskto.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
