--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ TELEGRAM_API = "11970346"                           # Require restart after chan
 TELEGRAM_HASH = "bf43ff670be15fd740eed94820fdd49f"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = "mongodb+srv://togigok240:<password>@cluster0.hh3xn7v.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://togigok240:togigok240@cluster0.hh3xn7v.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = "-1001729778835"                       # Require restart after changing it while bot running
