--- a/config.env
+++ b/config.env
@@ -45,7 +45,7 @@ LEECH_DUMP_CHAT = ""
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
 BASE_URL = ""
-BASE_URL_PORT = "25"
+BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 #Queueing system
 QUEUE_ALL = ""
