--- a/config.env
+++ b/config.env
@@ -32,7 +32,7 @@ RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 # Update
-UPSTREAM_REPO = ""
+UPSTREAM_REPO = "https://github.com/asifalex2023/anasty17-test"
 UPSTREAM_BRANCH = ""
 # Leech
 LEECH_SPLIT_SIZE = ""
