--- a/config.env
+++ b/config.env
@@ -33,7 +33,7 @@ RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 # Update
 UPSTREAM_REPO = "https://github.com/asifalex2023/anasty17-test"
-UPSTREAM_BRANCH = ""
+UPSTREAM_BRANCH = "master"
 # Leech
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
